--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "react-swipeable": "^7.0.2",
     "web-vitals": "^2.1.4"
   },
